chore: fix semantic errors

--- a/templates/pages/weapp-domains.html
+++ b/templates/pages/weapp-domains.html
@@ -21,7 +21,7 @@ title: 小程序域名白名单配置
   </div>
 
   <div class="step">
-    <h3>2. 选择 LeanCloud 应用，增加 <span ng-if="user.username && apps">必要的域名。</span><span ng-else>以下域名：</span></h3>
+    <h3>2. 选择 LeanCloud 应用，增加<span ng-if="user.username && apps">以下域名：</span><span ng-else>必要的域名。</span></h3>
     <div class="row" ng-if="user.username">
       <div class="step-content col-sm-4" ng-show="apps">
         <select class="form-control custom-select btn btn-default" ng-model="pageState.currentApp"  ng-options="app.app_name  for app in apps">
