feat: add Algolia DocSearch (#2350)
* feat: add Algolia DocSearch

* remove form tag to prevent search submission

--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -10,8 +10,8 @@ layout: index.swig
       <a href="sdk_down.html" class="btn btn-default" style="margin-top:2em;">SDK 下载</a> </div >
     {% else %}
     <!-- <h1 class="font-logo">Documentation</h1> -->
-    <form class="hero-search" role="search" action="https://newdoc.leanapp.cn/search" method="get">
-      <div class="form-group" style="margin:0 10px;">
+    {# <form class="hero-search" role="search" action="https://newdoc.leanapp.cn/search" method="get"> #}
+      <div class="form-group text-center" style="margin:0 10px;">
         <input id="site-search" name="q" type="text" class="form-control input-lg" placeholder="&#xf17a 输入错误代码、关键字来搜索&hellip;">
       </div>
       <!-- <ul class="list-keyword">
@@ -19,7 +19,7 @@ layout: index.swig
           <li><a href="/search.html?q=小程序" target="_blank">小程序</a></li>
           <li></li>
       </ul> -->
-    </form>
+    {# </form> #}
     {% endif %}
     <ul class="nav nav-pills text-center" role="tablist">
       <!--
