chore: added reference link to transient message
Closes #2377

--- a/views/realtime_guide.tmpl
+++ b/views/realtime_guide.tmpl
@@ -493,7 +493,7 @@ SDK 会在 Conversation 上维护 `unreadMessagesCount` 字段，这个字段在
 
 ### 自定义消息
 
-在某些场景下，开发者需要在发送消息时附带上自己业务逻辑需求的自定义属性，比如消息发送的设备名称，或是图像消息的拍摄地点、视频消息的来源等等，开发者可以通过 {{attributes}} 实现这一需求。
+在某些场景下，开发者需要在发送消息时附带上自己业务逻辑需求的自定义属性，比如消息发送的设备名称，或是图像消息的拍摄地点、视频消息的来源等等，开发者可以通过 {{attributes}} 实现这一需求。[暂态消息](#暂态消息) 就是通过自定义消息的方式来实现的。
 
 【场景】发照片给朋友，告诉对方照片的拍摄地点：
 
