feat: private deployment for sdk init. (#2411)
* feat: private deployment for sdk init.

* fixed spaces

* fixed typos

--- a/templates/pages/sdk_down.html
+++ b/templates/pages/sdk_down.html
@@ -67,7 +67,7 @@
 <h2><i class="icon icon-github"></i> Unity SDK </h2>
 <div class="desc">
     <p>
-      自 2016 年 12 月起，原来的 AVOSCloud.dll 按照模块被拆分为 Core、Storage、Analytics、Push 等不同的文件。 <a href="https://releases.leanapp.cn/#/leancloud/unity-sdk/releases">查看所有</a>
+      自 2016 年 12 月起，原来的 AVOSCloud.dll 按照模块被拆分为 Core、Storage、Analytics、Push 等不同的文件。阅读 <a href="start.html">SDK 安装指南</a> 获取帮助，或者访问 <a href="https://releases.leanapp.cn/#/leancloud/unity-sdk/releases">Unity SDK Release</a> 查看所有历史版本。
     </p>
   </div>
   <ul class="list-unstyled list-inline download-btns">
@@ -78,7 +78,7 @@
 <h2>.NET（新版）</h2>
 <div class="desc">
     <p>
-      自 2016 年 12 月起，.NET SDK 将统一代码并且按照模块被拆分为 Core、Storage、Analytics、Push 等不同的文件。
+      自 2016 年 12 月起，.NET SDK 将统一代码并且按照模块被拆分为 Core、Storage、Analytics、Push 等不同的文件。阅读 <a href="start.html">SDK 安装指南</a> 获取帮助，或者前往 Nuget 进行安装。
       <a href="https://www.nuget.org/packages/LeanCloud/">Install LeanCloud .NET SDK via nuget</a>
     </p>
   </div>
