fix: 数据表记录数超 1 万时再创建索引需要提交申请 (#2446)
* fix: 数据表记录数超 1 万条时开发者无法自行创建新索引

* update

* change func name

--- a/views/_data.njk
+++ b/views/_data.njk
@@ -2,10 +2,13 @@
   alert
 %}
 
+{% macro limitationsOnCreatingClassIndex() -%}
+当一个数据表的记录数超过 1 万时，开发者将无法自行为其创建索引（此前已创建的索引仍然会对超过 1 万条的数据生效）。商用版用户需要通过 [工单服务](https://leanticket.cn/tickets) 向我们提交创建申请（选择「建立索引」分类），开发版用户需要先升级到商用版才能提交创建申请。
+{% endmacro -%}
+
 {% macro androidSDKCompileInstructionLink(linkText) -%}
 <a escape-hash href="https://github.com/leancloud/android-sdk-all/blob/master/README.md#%E7%BC%96%E8%AF%91" target="_blank">{{ linkText }}</a>
 {% endmacro -%}
-
 
 {% macro restAppMetricsParams() -%}
   {%- set items = [
