fix: add site search input back (triage #2450)

--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -3,7 +3,11 @@ layout: index.swig
 ---
 <div class="row">
   <div class="doc-home-title col-md-8 col-md-offset-2 col-xs-offset-0">
-
+    <!-- <h1 class="font-logo">Documentation</h1> -->
+    <!-- <form class="hero-search" role="search" action="https://newdoc.leanapp.cn/search" method="get"> -->
+    <div class="form-group text-center" style="margin:0 10px;">
+      <input id="site-search" name="q" type="text" class="form-control input-lg" placeholder="&#xf17a 输入错误代码、关键字来搜索&hellip;">
+    </div>
     <ul class="nav nav-pills text-center" role="tablist">
       <!--
       <li role="presentation" class="active">
