--- a/templates/include/doc-nav.html
+++ b/templates/include/doc-nav.html
@@ -159,7 +159,7 @@
             <li><a href="rest_api.html">数据存储 API</a></li>
             <li><a href="leanengine-rest-api.html">云引擎 API</a></li>
             <li><a href="rest_api.html#Push_通知">消息推送 API</a></li>
-            <li><a href="realtime_rest_api.html">实时通信 API</a></li>
+            <li><a href="realtime_rest_api_v2.html">实时通信 API</a></li>
             <li><a href="rest_sms_api.html">短信验证 API</a></li>
             <li><a href="rest_api.html#统计数据_API">数据统计 API</a></li>
             <li><a href="status_system.html#REST_API">应用内社交 API</a></li>
