--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -227,7 +227,7 @@ layout: index.swig
               <ul class="list-unstyled">
                 <li><a href="faq_list.html">常见问题</a></li>
                 <li><a href="error_code.html">错误码详解</a></li>
-                <li><a href="realtime_rest_api.html">实时通信 REST API</a></li>
+                <li><a href="realtime_rest_api_v2.html">实时通信 REST API</a></li>
                 <li><a href="kb-network-connectivity-diagnosis.html">网络连通性诊断流程</a></li>
               </ul>
             </div>
@@ -317,7 +317,7 @@ layout: index.swig
               <ul class="list-unstyled">
                 <li><a href="rest_api.html">数据存储 REST API</a></li>
                 <li><a href="leanengine-rest-api.html">云引擎 REST API</a></li>
-                <li><a href="realtime_rest_api.html">实时通信 REST API</a></li>
+                <li><a href="realtime_rest_api_v2.html">实时通信 REST API</a></li>
                 <li><a href="rest_api.html#Push_通知">消息推送 REST API</a></li>
                 <li><a href="rest_api.html#统计数据_API">移动统计 REST API</a></li>
                 <li><a href="rest_sms_api.html">短信 SMS REST API</a></li>
