--- a/views/_rtm_rest_api_v2_system.njk
+++ b/views/_rtm_rest_api_v2_system.njk
@@ -142,38 +142,6 @@ curl -X GET \
 {"count": 100}
 ```
 
-
-### 给部分订阅者发消息
-
-该接口要求使用 master key。
-
-```sh
-curl -X POST \
-  -H "X-LC-Id: {{appid}}" \
-  -H "X-LC-Key: {{masterkey}},master" \
-  -H "Content-Type: application/json" \
-  -d '{"from_client": "", "message": ""}' \
-  https://{{host}}/1.2/rtm/service-conversations/{conv_id}/messages
-```
-**注意**，由于这个接口的管理性质，当你通过这个接口发送消息时，我们不会检查 **from_client** 是否有权限给这个服务号发送消息，而是统统放行，请谨慎使用这个接口。
-如果你在应用中使用了我们内部定义的 [富媒体消息格式](./realtime_v2.html#消息（Message）)，在发送消息时 **message** 字段需要遵守一定的格式要求，[富媒体消息格式说明](./realtime_rest_api.html#富媒体消息格式说明) 中有详细说明。
-
-
-参数 | 约束 | 说明
----|---|---
-from_client | 必填 |消息的发件人 client Id
-to_clients | 必填 | 接受消息的 client Id 列表，数组
-message | 必填 | 消息内容（这里的消息内容的本质是字符串，但是我们对字符串内部的格式没有做限定，<br/>理论上开发者可以随意发送任意格式，只要大小不超过 5 KB 限制即可。）
-transient | 可选|是否为暂态消息，默认 false
-no_sync | 可选|默认情况下消息会被同步给在线的 from_peer 用户的客户端，设置为 true 禁用此功能。
-push_data | 可选 | 以消息附件方式设置本条消息的离线推送通知内容。如果目标接收者使用的是 iOS 设备并且当前不在线，我们会按照该参数填写的内容来发离线推送。请参看 [离线推送通知](./realtime_v2.html#离线推送通知)
-priority | 可选 | 定义消息优先级，可选值为 high、normal、low，分别对应高、中、低三种优先级。该参数大小写不敏感，默认为高优先级 high。本参数仅对暂态消息或聊天室的消息有效，高优先级下在服务端与用户设备的连接拥塞时依然排队。
-
-返回说明：
-
-默认情况下发送消息 API 使用异步的方式，调用后返回消息 id 和接收消息的服务器时间戳，例如 
-`{"msg-id":"qNkRkFWOeSqP65S9fDyHJw", "timestamp":1495431811151}`。
-
 ### 给所有订阅者发消息
 
 该接口要求使用 master key。
@@ -197,9 +165,41 @@ push | 可选 | 附带的推送内容，如果设置，所有 iOS 和 Windows Ph
 {"msg-id":"qNkRkFWOeSqP65S9fDyHJw", "timestamp":1495431811151}
 ```
 
-### 查询服务号给特定订阅者发的消息
+### 给应用内任意用户发消息
 
 该接口要求使用 master key。
+
+```sh
+curl -X POST \
+  -H "X-LC-Id: {{appid}}" \
+  -H "X-LC-Key: {{masterkey}},master" \
+  -H "Content-Type: application/json" \
+  -d '{"from_client": "", "message": ""}' \
+  https://{{host}}/1.2/rtm/service-conversations/{conv_id}/messages
+```
+**注意**，由于这个接口的管理性质，当你通过这个接口发送消息时，我们不会检查 **from_client** 是否有权限给这个服务号发送消息，而是统统放行，请谨慎使用这个接口。
+如果你在应用中使用了我们内部定义的 [富媒体消息格式](./realtime_v2.html#消息（Message）)，在发送消息时 **message** 字段需要遵守一定的格式要求，[富媒体消息格式说明](./realtime_rest_api.html#富媒体消息格式说明) 中有详细说明。
+
+
+参数 | 约束 | 说明
+---|---|---
+from_client | 必填 |消息的发件人 client Id
+to_clients | 必填 | 数组类型表示接受消息的 client Id 列表，最多能包含 20 个 client Id
+message | 必填 | 消息内容（这里的消息内容的本质是字符串，但是我们对字符串内部的格式没有做限定，<br/>理论上开发者可以随意发送任意格式，只要大小不超过 5 KB 限制即可。）
+transient | 可选|是否为暂态消息，默认 false
+no_sync | 可选|默认情况下消息会被同步给在线的 from_peer 用户的客户端，设置为 true 禁用此功能。
+push_data | 可选 | 以消息附件方式设置本条消息的离线推送通知内容。如果目标接收者使用的是 iOS 设备并且当前不在线，我们会按照该参数填写的内容来发离线推送。请参看 [离线推送通知](./realtime_v2.html#离线推送通知)
+priority | 可选 | 定义消息优先级，可选值为 high、normal、low，分别对应高、中、低三种优先级。该参数大小写不敏感，默认为高优先级 high。本参数仅对暂态消息或聊天室的消息有效，高优先级下在服务端与用户设备的连接拥塞时依然排队。
+
+返回说明：
+
+默认情况下发送消息 API 使用异步的方式，调用后返回消息 id 和接收消息的服务器时间戳，例如 
+`{"msg-id":"qNkRkFWOeSqP65S9fDyHJw", "timestamp":1495431811151}`。
+
+### 查询服务号给某用户发的消息
+
+该接口要求使用 master key。查询结果包含服务号发送的订阅广播消息也包含单独发送的消息。
+
 ```sh
 curl -X GET \
   -H "X-LC-Id: {{appid}}" \
